# mdtool

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  release.sh  update_mdtool.sh
.github/workflows/: build.yaml  build.yml
include/: ConfigManager.hpp  mainWorker.hpp  ui.hpp
launch/: buildAndTest.bash
package/: createDebPackage.sh
package/DEBIAN/: control
package/mdtool_1.0-0_aarm64/DEBIAN/: control
package/mdtool_1.0-0_amd64/DEBIAN/: control
package/mdtool_1.0-0_armhf/DEBIAN/: control
package/mdtool_1.1-0_aarm64/DEBIAN/: control
package/mdtool_1.1-0_aarm64/etc/bash_completion.d/: mdtool_completion.sh
package/mdtool_1.1-0_amd64/DEBIAN/: control
package/mdtool_1.1-0_amd64/etc/bash_completion.d/: mdtool_completion.sh
package/mdtool_1.1-0_armhf/DEBIAN/: control
package/mdtool_1.1-0_armhf/etc/mdtool/: mdtool.ini
package/mdtools_0.1-1_amd64/DEBIAN/: control
src/: ConfigManager.cpp  main.cpp  mainWorker.cpp  ui.cpp
template_package/: postinst
template_package/MDtool_motors/: AK80-6.cfg  AK80-9.cfg  MN4004.cfg
template_package/etc/bash_completion.d/: mdtool_completion.sh
template_package/etc/mdtool/: mdtool.ini
template_package/etc/mdtool/mdtool_motors/: AK10-9-KV100.cfg  AK60-6.cfg  AK80-6.cfg  AK80-9.cfg  AK80-9_AUX.cfg  AK80-9_aux_center_mot.cfg  AK80-9_aux_center_rep.cfg  AK80-9_aux_center_start.cfg  AK80-9_aux_offaxis.cfg  BGM4114.cfg  EX8108.cfg  EX8108_RLS.cfg  GB4106.cfg  MA-hs.cfg  MN4004.cfg  MN5006.cfg  MN6007.cfg  TURNIGY_6364.cfg  default.cfg  default.ini
test/: CMakeLists.txt  ConfigManagerTest.cpp  test.cpp
